--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,6 +1,11 @@
-.container {
+/* .container {
   padding: 0 2rem;
-}
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+  padding-top: 56.25%; 
+} */
+
 
 .main {
   min-height: 100vh;
@@ -113,4 +118,16 @@
     width: 100%;
     flex-direction: column;
   }
+}
+
+
+.banner {
+  /* position: absolute; */
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
 }
