--- a/styles/globals.css
+++ b/styles/globals.css
@@ -249,6 +249,28 @@ padding-bottom: 6rem;
   }
 }
 
+.bg_selection {
+  /* background: red;  */
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  min-height: 100%;
+  min-width: 1024px;
+  width: 100%;
+  height: auto;
+  position: fixed;
+  /* top: 0;
+  left: 0; */
+}
+
+@media screen and (max-width: 1024px) { /* Specific to this particular image */
+  .bg_selection {
+    left: 50%;
+    margin-left: -512px;   /* 50% */
+  }
+}
+
 /* .err_content {
   display: flex;
   justify-content: center;
