--- a/styles/globals.css
+++ b/styles/globals.css
@@ -264,6 +264,40 @@ padding-bottom: 6rem;
   left: 0; */
 }
 
+/* dripdown css */
+.dropdown {
+  position: relative;
+  display: inline-block;
+  position: absolute;
+  z-index: 11;
+}
+
+.dropdown-menu {
+  display: none;
+  position: absolute;
+  /* background-color: #f9f9f9; */
+  min-width: 160px;
+  /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
+  /* z-index: 1; */
+}
+
+.dropdown-menu a {
+  /* color: black; */
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  /* position: absolute; */
+}
+
+/* .dropdown-content a:hover {background-color: #f1f1f1} */
+
+ .dropdown-menu-open {
+  display: block;
+  /* position: absolute; */
+}
+
+
+
 @media screen and (max-width: 1024px) { /* Specific to this particular image */
   .bg_selection {
     left: 50%;
